fixed the card background and the overflowing

--- a/src/containers/AboutPage/About.scss
+++ b/src/containers/AboutPage/About.scss
@@ -25,13 +25,15 @@
   align-self: center;
 }
 .goal-card {
-  max-width: 18rem;
   border: 0;
   border-radius: 12px;
   box-shadow: 0px 6px 16px rgba(40, 41, 61, 0.08);
   transition: all 0.3s ease-in-out;
   &:hover {
     box-shadow: 0px 8px 26px rgba(40, 41, 61, 0.1);
+  }
+  p{
+    height: auto;
   }
 }
 .card-title {
