--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -29,7 +29,6 @@
 }
 
 .goal-card {
-  max-width: 18rem;
   border: 0;
   border-radius: 12px;
   -webkit-box-shadow: 0px 6px 16px rgba(40, 41, 61, 0.08);
@@ -41,6 +40,10 @@
 .goal-card:hover {
   -webkit-box-shadow: 0px 8px 26px rgba(40, 41, 61, 0.1);
           box-shadow: 0px 8px 26px rgba(40, 41, 61, 0.1);
+}
+
+.goal-card p {
+  height: auto;
 }
 
 .card-title {
